--- a/index.css
+++ b/index.css
@@ -63,6 +63,9 @@
   position: absolute;
   left: 109px;
   top: 3px;
+  overflow:hidden;
+  height:36px;
+  line-height:18px;
   font-size: 12px;
 }
 
@@ -108,6 +111,9 @@ input {
   top: 0px;
 }
 
+.head2{
+	width: 100px;
+}
 .item img .head {
   width: 60px;
 }
@@ -118,15 +124,20 @@ input {
 
 /* Soft Keys */
 #softkeys {
-  position: fixed; bottom: 0; left: 0; width: 100%; height: 30px;
-  background: #dadada;
-  padding: 3px 5px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    background: #dadada;
+    padding: 3px 5px;
+    z-index: 200;
 }
 
 #softkeys > * {
-  display: inline-block;
-  width: 72px;
-  padding: 0 5px;
+    display: inline-block;
+    width: 72px;
+    padding: 0 5px;
 }
 
 #softkey-left, #softkey-right {
@@ -146,3 +157,39 @@ input {
   color: #323232;
   text-align: center;
 }
+
+#menu {
+    display: none;
+    z-index: 100;
+    background: rgba(00,00,00,0.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#menucontainer {
+    position: fixed;
+    bottom: 30px;
+    left: 0px;
+    width: 98%;
+    background: white;
+    margin: 3px;
+}
+
+.menuitem {
+    position: relative;
+    background-color: white;
+    width: 100%;
+    outline: none;
+    height: 30px;
+    padding-left: 5px;
+    line-height: 30px;
+} 
+
+.menuitem:focus {
+    background-color: #00a1d6;
+    color: white;
+}
+
