--- a/player/index.css
+++ b/player/index.css
@@ -53,23 +53,30 @@
   color: white;
 }
 
+
 /* Item's inner */
 /*video infos*/
-.items #title {
-  height: 90px;
+.items #title { 
+    height: auto;
+}
+
+.items #desc { 
+    height: 82px;
 }
 
 .items #title #title {
-  position: absolute;
+  position: unset;
   top: 5px;
-  left: 10px;
+  height: auto;
+  left: 10px; 
   font-size: 14px;
 }
 
 .items #title #info {
-  position: absolute;
+  position: unset;
   bottom: 5px;
   left: 10px;
+  height: auto;
   font-size: 12px;
   display: inline
 }
@@ -167,3 +174,42 @@
   color: #323232;
   text-align: center;
 }
+
+
+.commenthead
+{
+  float:left;
+  position: relative;
+  padding:5px 0;
+  width: 100%; 
+  height:50px;
+  outline: none;
+}
+.itemcomment
+{
+  float:left;
+  position: relative;
+  padding:5px 0;
+  width: 100%;  
+  background-color: white;
+  outline: none;
+}
+.comment{
+  float:left;
+  position: relative;
+  padding:5px 0;
+  width: 100%;  
+  outline: none;
+  max-height:60px;
+}
+.itemcomment:focus {
+  background-color: #00a1d6;
+  color: white;
+} 
+.left_img{
+    width: 40px; 
+    height: 100%;
+	margin:5px;
+    float:left; 
+}  
+
